# goit-pythonweb-hw-12

./: .examplenv  .gitignore  conf.py  index.rst  pyproject.toml  test.db
_build/doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/html/_modules/: index.html
_build/html/_modules/app/: main.html
_build/html/_modules/app/services/: auth.html  contacts.html  user.html
_build/html/_modules/fastapi/: applications.html
_build/html/_modules/passlib/: context.html
migrations/: env.py
migrations/versions/: 2f546f91baac_init.py  5eb2dd907833_feat_user_role.py  5f6aaaeb9b25_initial_migration.py  a0fee5b9fe39_initial_migration.py  c77a0122a44a_add_user_contact_relations.py  d7eb38218d26_add_user.py  e04bdcc35bf8_feat_role.py
src/app/: main.py
src/app/config/: config.py
src/app/controllers/: contacts.py  user.py
src/app/database/: db.py  models.py
src/app/response/: schemas.py
src/app/routes/: auth.py  contacts.py  user.py
src/app/services/: auth.py  contacts.py  current_user.py  email.py  upload_file.py  user.py
src/app/services/templates/: reset_password.html
tests/: conftest.py  test_auth_routes.py  test_auth_service.py  test_contact_models.py  test_contacts_routes.py  test_contacts_service.py  test_current_user.py  test_email_service.py  test_upload_file_service.py  test_user_routes.py  test_user_service.py
